<resources>
    <string name="app_name">Lindsay</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Camara</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Videos</string>
    <string name="Calendario">Reservas</string>
    <string name="Productos">Productos</string>
    <string name="ventas">Ventas</string>
    <string name="ubicacion">Ubicacion</string>


    <string-array name="sexo_options">
        <item>Masculino</item>
        <item>Femenina</item>
    </string-array>
    <string-array name="idestilista">
        <item>Corte</item>
        <item>Maquillado</item>
        <item>Bases</item>
        <item>Depilaciones</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="contrse_a">Contrseña</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu Contraseña?</string>
    <string name="ingrese_usuario">Ingrese Usuario</string>
    <string name="otros">Otros</string>

</resources>