<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF004A93"
        tools:context=".login">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo22" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0.8"
                android:gravity="bottom"
                android:orientation="horizontal">

            <pl.droidsonroids.gif.GifImageView
                    android:layout_marginTop="10dp"
                    android:paddingTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/titulo"
                    android:id="@+id/imageView2"
                    android:layout_marginBottom="3dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:gravity="center"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/LoginUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/borde"
                    android:backgroundTint="#80000000"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/white"
                    android:fontFamily="casual"
                    android:hint="@string/ingrese_usuario"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white" />

            <EditText
                    android:id="@+id/LoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/borde"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#80000000"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/white"
                    android:hint="@string/contrse_a"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:textColor="@color/white" tools:ignore="TextFields"/>

            <pl.droidsonroids.gif.GifImageButton
                    android:id="@+id/LoginIngresar"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/transparentColor"
                    android:padding="15dp"
                    android:src="@drawable/ingresar1"
                    android:scaleType="fitXY"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:elevation="10dp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="1dp"/>

            <pl.droidsonroids.gif.GifImageButton
                    android:id="@+id/LoginCrear"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/transparentColor"
                    android:padding="15dp"
                    android:src="@drawable/crear_cuenta"
                    android:scaleType="fitXY"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:elevation="10dp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="1dp"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                <View
                        android:layout_width="120dp"
                        android:layout_height="1dp"
                        android:background="@color/white" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/otros"
                        android:textColor="@color/white" />
                <View
                        android:layout_width="120dp"
                        android:layout_height="1dp"
                        android:background="@color/white" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
            <pl.droidsonroids.gif.GifImageButton
                    android:layout_marginTop="-20dp"
                    android:id="@+id/btnFacebook"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:scaleType="fitXY"
                    android:backgroundTint="@color/transparentColor"
                    android:src="@drawable/f"/>

            <pl.droidsonroids.gif.GifImageButton
                    android:layout_marginTop="4dp"
                    android:id="@+id/btnWhatsapp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:backgroundTint="@color/transparentColor"
                    android:src="@drawable/whatsapp"/>

            <pl.droidsonroids.gif.GifImageButton
                    android:id="@+id/btnInstagram"
                    android:layout_marginTop="-25dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:backgroundTint="@color/transparentColor"
                    android:src="@drawable/instagram"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>